# Evolutionary

./: README.md
client/: main.cpp
include/: container.h  transport.h
src/: airplane.cpp  airplane.h  boat.cpp  container.cpp  container_airplanes.cpp  train.cpp  train.h  transport.cpp  truck.cpp  truck.h
task1/: CMakeLists.txt
task1/src/: airplane.cpp  container.cpp
task1/tests/: testcontainer.cpp
task2/: README.md
task2/client/: main.cpp
task2/src/: boat.cpp  train.h
task3/: README.md
task3/include/: transport.h
task3/src/: boat.h  container.cpp  train.cpp
task3/tests/: testcontainer.cpp  testtransport.cpp
task4/: README.md
task4/include/: container.h  idealtime.h  transport.h
task4/src/: airplane.cpp  container.cpp  idealtime.cpp  train.cpp
task4/tests/: testcontainer.cpp
task5/: README.md
task5/include/: container.h  transport.h
task5/src/: boat.cpp  boat.h  train.cpp
task5/tests/: testcontainer.cpp  testtransport.cpp
task6/: README.md
task6/client/: main.cpp
task6/include/: multimethod.h  transport.h
task6/src/: container.cpp  multimethod.cpp  train.h  transport.cpp
task6/tests/: testcontainer.cpp
task7/include/: transport.h
task7/src/: boat.h  container_airplanes.cpp
task7/tests/: testcontainer.cpp
tests/: testcontainer.cpp  testtransport.cpp
